# best-offer-bot

./: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  task.tex
.github/workflows/: dotenv-linter.yaml
src/: .env  .env.example  main.py
src/app/: telegram_bot.py
src/db/: database.py  schema.sql
src/parsers/: ozon_parser.py
