[project]
name = "best-offer-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.24.0",
    "async>=0.6.2",
    "dotenv>=0.9.9",
    "playwright>=1.57.0",
    "psycopg2>=2.9.11",
    "python-telegram-bot>=22.6",
]
